# idle-evaluation

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
experiments/error_correction/: runner.py
experiments/long-horizon/tasks/: api_integration.json
experiments/long_horizon/: analysis.py  runner.py
experiments/long_horizon/tasks/: debug_workflow.json  multi_file_refactor.json
experiments/simple_eval/: runner.py
experiments/swe-bench/: runner.py
experiments/swe_bench/: runner.py
experiments/tau_bench/: runner.py
figures/: generate.py
harnesses/baseline/: config.json
harnesses/idle/: config.json
harnesses/idle-no-consensus/: config.json
harnesses/idle-no-review/: config.json
metrics/: __init__.py  cost_efficiency.py  error_rate.py  pass_k.py  task_completion.py
report/: benchmark_research.md  preliminary_results.md  references.bib  template.md
results/: mock_error-correction_baseline.jsonl  mock_error-correction_idle-full.jsonl  mock_long-horizon_baseline.jsonl  mock_long-horizon_idle-full.jsonl  mock_long-horizon_idle-no-alice.jsonl  simple_calculator_baseline_20251231_212956.jsonl  simple_calculator_baseline_20251231_213709.jsonl  simple_calculator_idle-full_20251231_213205.jsonl  simple_calculator_idle-full_20251231_214024.jsonl  simple_calculator_idle-no-alice_20251231_214359.jsonl  simple_fizzbuzz_baseline_20251231_212610.jsonl  simple_fizzbuzz_idle-full_20251231_212800.jsonl
scripts/: run_all.sh  setup.sh  summarize_results.py
