[project]
name = "idle-evaluation"
version = "0.1.0"
description = "Evaluation framework for the idle Claude Code plugin"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.1",
]
benchmarks = [
    "tau-bench @ git+https://github.com/sierra-research/tau-bench",
    "datasets>=2.0",  # For SWE-bench
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.1",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
